[workspace]
resolver = "2"
members = [
    "gracile",
    "gracile-core",
    "gracile-cli",
    "gracile-wasm",
]

[workspace.dependencies]
gracile-core = { path = "gracile-core", version = "0.1.0" }

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/thwbh/gracile"
