[package]
name = "gracile-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Gracile templating engine"

[[bin]]
name = "gracile"
path = "src/main.rs"

[dependencies]
gracile-core.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json = "1"
