[package]
name = "gracile-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for the Gracile templating language — lexer, parser, AST, and renderer"

[lib]

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
insta = "1.46.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
