[package]
name = "gracile-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the gracile templating engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gracile-core.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
